# publications

./: .mtn-ignore  Makefile.am  TODO.txt  configure.ac  release-expand.config  tests.config
install/deb/: changelog  control  rules
install/rpm/: publications.spec
tests/: introduction.html  tests.config
tests/specifications/: version.t
